1.5.2
-----
1. Fix 'white line' appearing at the bottom of kwin titlebars when not using
   an outer border.
2. If drawing an inner frame for kwin decorations, draw after titlebar has been
   drawn.

1.5.1
-----
 1. Always use active palette to draw progressbar gradient.
 2. Fix style-support enabled builds
 3. Fix etched combos and spinbuttons when using round widgets, but square entry
    fields.
 4. Fix etch of non-unified combos.
 5. Fix config module compilation when kwin headers are not installed.
 6. Dont draw thumbs on circular sliders - they dont look good!
 7. Fix black bottom corners on fully rounded windows when not using compositing.
 8. Dont apply background opacity setting to; plasma (seems to cause an icon for
    plasma to appear in the taskbar), kwin, or screensavers (prevents these from
    being displayed).
 9. Add config option of apps to exclude from background opacity setting. Defaults
    to amarok, dragon, kscreenlocker, and smplayer.
10. Dont draw transparent windows if compositing is turned off.
11. Fix missing titlebar/taskbar icons in some apps (e.g. dolphin and kcalc) when
    using background transparency - thanks to Thomas Lübking.
12. Fix Qt4.5 compilation.
13. Fix colour of arrow-style min/max kwin buttons with dark colour schemes.
14. Base alpha values, used to create sunken titlebar button background, on the
    'value' of the background colour HSV.
15. Allow usage of sunken background even when not using circular titlebar buttons.
16. Fix qmake compilation - thanks to Hugues Delorme
17. Fix kwin painting of some shaded windows (e.g. YaST) when using unified titlebar
    and menubar
18. Fix clipping of etched/rounded editable combo frames that have icons.

1.5.0
-----
 1. Add option to set progressbar colour.
 2. Add options to have squared sliders and/or scrollbar sliders even when
    general setting set to round.
 3. Add option to use menubar colours for popup menus.